--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "main": "src/server.ts",
   "scripts": {
     "dev": "ts-node -r tsconfig-paths/register ./src/server.ts",
+    "build": "tsc && tsc-alias",
+    "migration:up": "node node_modules/db-migrate/bin/db-migrate up",
+    "migration:down": "node node_modules/db-migrate/bin/db-migrate down",
+    "migration:create": "node node_modules/db-migrate/bin/db-migrate create --sql-file --table=",
+    "migration:refresh": "node node_modules/db-migrate/bin/db-migrate refresh",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Elvis Onobo",
@@ -11,9 +16,11 @@
   "description": "",
   "dependencies": {
     "db-migrate": "^0.11.14",
+    "db-migrate-pg": "^1.5.2",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "express-async-errors": "^3.1.1",
+    "pg-promise": "^11.9.1",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "winston": "^3.14.2"
@@ -21,6 +28,7 @@
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/node": "^22.7.4",
+    "@types/pg-promise": "^0.0.28",
     "typescript": "^5.6.2"
   }
 }
