--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bluebird": "^3.7.2",
     "db-migrate": "^0.11.14",
     "db-migrate-pg": "^1.5.2",
     "dotenv": "^16.4.5",
@@ -26,7 +27,8 @@
     "winston": "^3.14.2"
   },
   "devDependencies": {
-    "@types/express": "^5.0.0",
+    "@types/bluebird": "^3.5.42",
+    "@types/express": "^4.17.21",
     "@types/node": "^22.7.4",
     "@types/pg-promise": "^0.0.28",
     "typescript": "^5.6.2"
