chore: add tests

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,5 +12,19 @@ services:
     ports:
       - 5432:5432
 
+  trustcrow-test-db:
+    image: postgres
+    restart: always
+    shm_size: 128mb
+    environment:
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: trustcrowdb_test
+      POSTGRES_USER: postgres
+    volumes:
+      - trustcrow-test-db:/var/lib/postgresql/data
+    ports:
+      - 5433:5432
+
 volumes: 
   trustcrow-db:
+  trustcrow-test-db:
