--- a/package.json
+++ b/package.json
@@ -9,28 +9,41 @@
     "migration:down": "node node_modules/db-migrate/bin/db-migrate down",
     "migration:create": "node node_modules/db-migrate/bin/db-migrate create --sql-file --table=",
     "migration:refresh": "node node_modules/db-migrate/bin/db-migrate refresh",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --detectOpenHandles --coverage",
+    "pretest": "cross-env NODE_ENV=test npm run migration:down && cross-env NODE_ENV=test npm run migration:up"
   },
   "author": "Elvis Onobo",
   "license": "ISC",
   "description": "",
   "dependencies": {
     "bluebird": "^3.7.2",
+    "cross-env": "^7.0.3",
     "db-migrate": "^0.11.14",
     "db-migrate-pg": "^1.5.2",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
-    "express-async-errors": "^3.1.1",
+    "express-async-error": "^0.0.2",
+    "express-async-errors": "^2.0.0",
     "pg-promise": "^11.9.1",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "winston": "^3.14.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.25.7",
+    "@babel/preset-env": "^7.25.7",
+    "@babel/preset-typescript": "^7.25.7",
+    "@jest/globals": "^29.7.0",
     "@types/bluebird": "^3.5.42",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.13",
     "@types/node": "^22.7.4",
     "@types/pg-promise": "^0.0.28",
+    "@types/supertest": "^6.0.2",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5",
     "typescript": "^5.6.2"
   }
 }
