--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.21.0",
     "express-async-error": "^0.0.2",
     "express-async-errors": "^2.0.0",
+    "joi": "^17.13.3",
     "pg-promise": "^11.9.1",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
